// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render AddProject correctly when there are no projects 1`] = `
<div
  className="admin-module"
>
  <div
    className="admin-section__header"
  >
    Add New Project
  </div>
  <div
    className="admin-section"
  >
    <div
      className="add-team"
    >
      <form
        className="add-team__input-form"
        id="add-project-form"
        onSubmit={[Function]}
      >
        <input
          className="add-team__input add-project__name"
          contentEditable={true}
          placeholder="Project name"
        />
        <input
          className="add-team__input add-project__admin"
          contentEditable={true}
          placeholder="Project admin (Google email)"
        />
        <button
          className="btn btn--secondary btn--shine btn--add"
          form="add-project-form"
          type="submit"
        >
          +
        </button>
      </form>
    </div>
  </div>
  <div
    className="admin-expandable-area-container expandable-project-area"
  >
    <div
      className="admin-expandable-area__notification"
    >
      Deleting a project will remove ALL of it's teams and data!
    </div>
    <div
      className="admin-expandable-area"
    >
      <div
        className="list-item__message"
      >
        There are no projects. Add the first one!
      </div>
    </div>
  </div>
  <div
    className="admin-section__footer"
    onClick={[Function]}
  >
    View projects
    <div
      className="chevron-logo-container project-chevron"
    >
      <svg
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`should render AddProject correctly when there are projects 1`] = `
<div
  className="admin-module"
>
  <div
    className="admin-section__header"
  >
    Add New Project
  </div>
  <div
    className="admin-section"
  >
    <div
      className="add-team"
    >
      <form
        className="add-team__input-form"
        id="add-project-form"
        onSubmit={[Function]}
      >
        <input
          className="add-team__input add-project__name"
          contentEditable={true}
          placeholder="Project name"
        />
        <input
          className="add-team__input add-project__admin"
          contentEditable={true}
          placeholder="Project admin (Google email)"
        />
        <button
          className="btn btn--secondary btn--shine btn--add"
          form="add-project-form"
          type="submit"
        >
          +
        </button>
      </form>
    </div>
  </div>
  <div
    className="admin-expandable-area-container expandable-project-area"
  >
    <div
      className="admin-expandable-area__notification"
    >
      Deleting a project will remove ALL of it's teams and data!
    </div>
    <div
      className="admin-expandable-area"
    >
      <div
        className="admin-area__item"
        key="project"
      >
        <div
          className="admin-area__item-text"
        >
          Project
        </div>
        <button
          className="admin-area__item-remove"
          onClick={[Function]}
        >
          ✕
        </button>
      </div>
      <div
        className="admin-area__item"
        key="project2"
      >
        <div
          className="admin-area__item-text"
        >
          Project2
        </div>
        <button
          className="admin-area__item-remove"
          onClick={[Function]}
        >
          ✕
        </button>
      </div>
    </div>
  </div>
  <div
    className="admin-section__footer"
    onClick={[Function]}
  >
    View projects
    <div
      className="chevron-logo-container project-chevron"
    >
      <svg
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        />
      </svg>
    </div>
  </div>
</div>
`;
